services/PostService/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: post-service-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
  selector:
    app: post-service
